# python-template-mini

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: test_say_hello.py
your_project_name/: main.py
your_project_name/module1/: funct_another_file.py  funct_say_hello.py
